# DomainForge

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  dev.sh  docker-compose.yml  domainforge.sh  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0002_eval_results_memory_tsv.py  0003_knowledge_redesign.py  0004_user_password_hash.py  0005_agents.py  0006_legal_agent_default_model.py  0007_message_citations.py  0008_installed_skills.py  63a3219fddeb_initial_migration.py
app/: main.py
app/api/: admin.py  agents.py  audit.py  chat.py  evals.py  health.py  knowledge.py  sessions.py  skills.py
app/configs/: settings.py
app/database/: session.py
app/evals/: __init__.py  analyzer.py  runner.py
app/llm/: __init__.py  base.py
app/memory/: __init__.py  manager.py  memory_service.py
app/rag/: service.py
app/runtime/: runtime.py
app/schemas/: agent.py  chat.py  knowledge.py
app/security/: __init__.py  auth.py  content_filter.py  jwt.py  password.py  permission.py  prompt_guard.py
app/services/: __init__.py  attachment_store.py  cache.py  import_job_store.py  preview_store.py  redis.py
app/skills/: __init__.py  injection.py  loader.py  manifest.py  registry.py  service.py
app/tools/: base.py
docs/: 2026-06-28-skill-management-tech-notes.md  README.md  api_reference.md
docs/plan/: design.md  (+1 more)
frontend/: package-lock.json  package.json
scripts/: benchmark.py  build_index.py  import_documents.py  run_evals.py  run_perf_eval.py  run_rag_eval.py
tests/: conftest.py  test_main_lifespan_skills.py  test_settings.py
(+226 files in other folders)
